--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,23 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "s.practice"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
+        ndk {
+            //选择要添加的对应cpu类型的.so库
+            abiFilters 'armeabi-v7a','arm64-v8a',"x86"
+            //还可以添加 'armeabi', 'x86'
+
+        }
     }
     buildTypes {
         release {
@@ -18,6 +26,18 @@ android {
         }
     }
 
+// 移除lint检查的error
+    lintOptions{
+        // 如果为true, 则只报告错误
+        ignoreWarnings true
+    }
+
+
+    sourceSets{
+        main(){
+            jniLibs.srcDirs=['libs']
+        }
+    }
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -28,10 +48,15 @@ dependencies {
     compile 'com.lzy.net:okgo:3.0.4'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.daimajia.numberprogressbar:library:1.2@aar'
+    compile 'liji.library.dev:citypickerview:3.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'it.sephiroth.android.library.imagezoom:library:1.0.4'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.blankj:utilcode:1.15.1'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.android.support:design:26.+'
+    testCompile 'junit:junit:4.12'
+    compile project(':kefu-easeui')
+    compile files('libs/kefu-sdk-1.1.7.jar')
 }
